Eigene Webseite Angepasst

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             padding: 1em 1em 0.5em 1em;
             color: var(--secondary_color);
             text-align: center;
+
         }
 
         header #menu{
@@ -57,8 +58,9 @@
             background-color: var(--secondary_color);
             height: 100%;
             padding: 1em;
-            flex: 1 60vh;
+            flex: 1;
             overflow: auto;
+
         }
 
         #content > h1{
@@ -68,8 +70,9 @@
         footer{
             background-color: var(--primary_color);
             color: var(--secondary_color);
-            padding: 1em;
+            padding: 0.2em;
             text-align: center;
+
         }
 
     </style>
@@ -92,6 +95,7 @@
             <span>Übung 12</span>
         </div>
     </header>
+
     <div id="content">
     <h1>Herzlich Wilkommen!</h1>
         <h2>Über diese Webseite</h2>
@@ -126,6 +130,7 @@
 
 
     </div>
-    <footer>&copy Moritz Balg 2021</footer>
+    <footer>&copy 2021 Moritz Balg </footer>
+
 </div>
 </html>
