--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         html,body{
             margin: 0;
             height: 100%;
-            font-family: sans-serif;
+            font-family: "Arial" ,sans-serif;
         }
 
         #webcontainer{
@@ -25,7 +25,7 @@
 
         header{
             background-color: var(--primary_color);
-            padding: 0 1em 0.5em 1em;
+            padding: 0 1em 0 1em;
             color: var(--secondary_color);
             text-align: center;
 
