--- a/Aufgabe_1/Abschnitt1.html
+++ b/Aufgabe_1/Abschnitt1.html
@@ -9,9 +9,9 @@
 <h1>Hallo Welt</h1>
 das ist ein Test
 
-<div class="codeBox" style="width: 30%">
+<div class="codeBox" >
     <div class="title">Hallo Welt Programm:</div>
-    <div class="language">JAVA</div>
+    <div class="language_css">CSS</div>
     <code>
         <pre>
 public Class Test{
