--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="menu">
             <span onclick="content_loader(this, 'Aufgabe1.html')">Übung 1</span>
             <span onclick="content_loader(this)">Übung 2</span>
-            <span onclick="content_loader(this)">Übung 3</span>
+            <span onclick="content_loader(this, 'Aufgabe3.html')">Übung 3</span>
             <span onclick="content_loader(this)">Übung 4</span>
             <span onclick="content_loader(this)">Übung 5</span>
             <span onclick="content_loader(this)">Übung 6</span>
