--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <script>
         async function content_loader(a, path) {
             const content = document.getElementById("content");
+            a.style.backgroundColor = "#56b0b7";
             if(path){
                 const htmlContent = await (await fetch(path)).text();
-                const headline = document.createElement('h1');
-                headline.textContent += " " + a.textContent; 
                 content.innerHTML = htmlContent;
-                content.appendChild(headline);
             } else{
                  content.innerHTML= "<h1>" + a.textContent + "</h1>"  + "<h2>Seite nicht verfügbar!</h2>";
             }
