--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script>
         function content_loader(a, path) {
-            document.getElementById("content").innerHTML= "<h1>" + a.textContent + "</h1>"  + '<object style="width: 99vw; height:69vh;" type="text/html" data="Aufgabe3.html" ></object>';
+            document.getElementById("content").innerHTML= "<h1>" + a.textContent + "</h1>"  + '<object style="width: 100%; height:100%;" type="text/html" data="Aufgabe3.html" ></object>';
         }
     </script>
 </head>
