--- a/Aufgabe5/Aufgabe2.html
+++ b/Aufgabe5/Aufgabe2.html
@@ -7,34 +7,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script>
-        function click(){
+        async function click() {
             let aContent = null;
             let bContent = null;
             const aContainer = document.getElementById("a");
             const bContainer = document.getElementById("b");
             const conContainer = document.getElementById("concat")
-            fetch("A.txt")
-                .then(response => response.text())
-                .then(response => {
-                    aContainer.textContent = response
-                    aContent = response;
-                    concatFiles();
-                })
-                .catch(err => console.log(err));
-            fetch("B.txt")
-                .then(response => response.text())
-                .then(response => {
-                    bContainer.textContent = response
-                    bContent = response;
-                    concatFiles();
-                })
-                .catch(err => console.log(err));
-            function concatFiles(){
+
+            try {
+                aContent = await fetchTxt("A.txt");
+                bContent = await fetchTxt("B.txt");
+            } catch (error) {
+                console.log(error);
+                return;
+            }
+            concatFiles();
+
+            function concatFiles() {
                 conContainer.textContent = "";
-                if(aContent != null && bContent!=null){
+                if (aContent != null && bContent != null) {
                     aContent = aContent.split("\n");
                     bContent = bContent.split("\n");
-                    for(let i = 0; i < aContent.length; i++){
+                    for (let i = 0; i < aContent.length; i++) {
                         conContainer.textContent += aContent[i] + " " + bContent[i] + "\r\n";
                     }
                 }
@@ -46,6 +40,14 @@
 
         };
 
+        async function fetchTxt(url) {
+            const request = await fetch(url);
+            if(request.ok){
+                return await request.text();
+            }
+            return null;
+        }
+
     </script>
 </head>
 <body>
@@ -54,7 +56,7 @@
 <p id="b">Inhalt der Datei B</p>
 <hr>
 <p>
-    <pre id="concat">
+<pre id="concat">
     Inhalt der Dateien concatiniert
     </pre>
 </p>
