--- a/u6/a1.html
+++ b/u6/a1.html
@@ -12,6 +12,8 @@
         body{
             margin: 0;
             font-family: sans-serif;
+            font-size: larger;
+            font-weight: bold;
         }
 
         svg{
